<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeebd"
    tools:context=".TestBotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/journeytxt"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:fontFamily="@font/od_bold"
                android:text="@string/journey"
                android:textColor="#703d38"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/testbotimg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/testbot"
                android:contentDescription="@string/testbot_image" />

            <TextView
                android:id="@+id/writingtxt"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/od_bold"
                android:text="  Test Bot"
                android:textColor="#703d38"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/scrollview_content_description">
                <LinearLayout
                    android:id="@+id/questionsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/od_regular"
                android:hint="@string/send_message_hint"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="#703d38"
                android:textColorHint="#703d38"
                android:textSize="18dp" />


            <ImageButton
                android:id="@+id/send"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/send"
                android:contentDescription="@string/send_message"
                android:padding="8dp" />

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
